[package]
name = "vk-auth"
version = "0.1.0"
authors = ["aCLr <a.ch.clr@gmail.com>"]
description = "Vkontakte (vk.com) authorization client"
homepage = "https://github.com/aCLr/vk-auth"
repository = "https://github.com/aCLr/vk-auth"
license = "MIT"
keywords = [ "vkontakte", "vk" ]
include = [
    "Cargo.toml",
    "**/*.rs",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    ".gitignore"
]
readme = "README.md"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"]}
scraper = "0.12.0"
anyhow = "1"
url = "2.2"
form_urlencoded = "1"


[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}